# mipt-hack-23

./: .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-deploy.yml
bot_service/: __init__.py  app.py  bot.py
bot_service/handlers/: __init__.py  photo.py  start.py  story.py  voice.py
bot_service/utils/: actions.py  chat_history.py  markdown.py
notebooks/: gemini_chat_playground.ipynb  gemini_playground.ipynb
sh/: deploy.sh  webhook.sh
static/: metadata.txt
tests/bdd/features/: gemini_pro_vision_artwork.feature
tests/bdd/step_defs/: conftest.py  test_gemini_pro_vision_artwork.py
tests/integration/: test_model_limit.py
tests/unit/utils/: test_chat_history.py
tests/utils/: test_markdown.py
